Fixed a UI bug on mobile.

--- a/css/chat.css
+++ b/css/chat.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+body {
+
+    background-color: #c2c2c244;
+}
+
 h1 {
     text-align: center;
     margin: 12px;
@@ -71,3 +76,19 @@ h3 {
 
 }
 
+.message-container .message {
+    margin-bottom: 10px;
+    color: black;
+
+    position: relative;
+    height: auto;
+    padding-bottom: 20px;
+}
+
+.message-container .message p{
+    font-size: 25px;
+}
+
+.spacer {
+    height: 5%;
+}
